adding required flags for CUDA on CMakeList.txt Also the flag CUDA_RUNTIME is set, which will later on be check on the sourcefiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,17 @@ if( HWLOC_FOUND )
     link_directories( ${HWLOC_LIBRARIES} )
 endif( HWLOC_FOUND )
 
+option( CUDA "CUDA" ON )
+message( "CUDA ON" )
+if( CUDA )
+find_package( CUDA REQUIRED )
+if ( CUDA_FOUND )
+    add_definitions( -DCUDA_RUNTIME )
+    include_directories( ${CUDA_INCLUDE_DIRS} )
+    link_directories( ${CUDA_LIBRARIES} )
+endif( CUDA_FOUND )
+endif( CUDA )
+
 option(TBB "TBB" ON)
 if(TBB)
 find_package( TBB )
