LENET example added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ if( HWLOC_FOUND )
     link_directories( ${HWLOC_LIBRARIES} )
 endif( HWLOC_FOUND )
 
-option( CUDA "CUDA" ON )
+option( CUDA "CUDA" OFF )
 message( "CUDA ON" )
 if( CUDA )
 find_package( CUDA REQUIRED )
@@ -86,8 +86,8 @@ else()
     message("DEQUE ON")
 endif(TBB)
 
-option(MKL  "MKL"   OFF)
-option(ACML "ACML"  OFF)
+option(MKL "MKL" ON)
+option(ACML "ACML" OFF)
 option(ACML "ATLAS" OFF)
 if(MKL)
     message("mkl ON")
